Added testfx. OptionsViewController done.